--- a/src/pages/Shared/Navigation.css
+++ b/src/pages/Shared/Navigation.css
@@ -1,14 +1,9 @@
 .nab{
-    color:black;
-    margin-right: 20px;
     text-decoration: none;
+    color:#87AFC9;
+    
 }
-
-.site_btn{
+/* .site_btn{
    
    border-radius: 3px;
-}
-.name{
-    background-color:rgb(76, 198, 238);
-  
-}
+} */
